# fiesta-plus

./: .codacy.yml  .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  issue-157  pyproject.toml  werf.yaml
.github/scripts/: render-issues-to-wiki.sh
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml  deploy.yml  docker-build.yml  issues-to-wiki.yaml  todo.yml
charts/: Chart.yaml  README.md  values.yaml
charts/templates/: _helpers.tpl  _secret.tpl  deployment.yaml  ingress.yaml  web-config.yaml  web-deployment.yaml  web-key-secret.yaml  web-mailer.yaml  web-migrate-job.yaml  web-secret.yaml  web-svc.yaml
charts/templates/certs/: cert.yaml  dns-webhook-secret.yaml  issuer.yaml  scw-webhook-sa-rb.yaml
conf/: k8s-bootstrap.yaml
elastic/: elastic.yml  kibana.yml
fiesta/: .env.base  .env.template  Dockerfile  manage.py  run.sh
fiesta/apps/accounts/: adapters.py  admin.py  apps.py  conf.py  hashers.py  social.py  urls.py
fiesta/apps/accounts/forms/: profile.py  profile_factory.py  profile_finish.py  social_accounts_fields.py  test_social_accounts_fields.py
fiesta/apps/accounts/middleware/: __init__.py  user_profile.py
fiesta/apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_accountsconfiguration_required_nationality_and_more.py  0004_accountsconfiguration_required_gender_and_more.py  0005_userprofile_picture_alter_userprofile_gender.py  0006_alter_userprofile_picture.py  0007_remove_userprofile_home_university_or_faculty_and_more.py  0008_alter_userprofile_picture_alter_userprofile_state.py  0009_accountsconfiguration_required_picture.py  0010_alter_accountsconfiguration_required_gender_and_more.py  0011_delete_accountsconfiguration.py  0012_userprofile_phone_number.py  0013_userprofile_interests_alter_userprofile_picture.py  0014_alter_userprofile_interests.py  0015_alter_userprofile_gender.py  0016_userprofile_facebook_userprofile_instagram_and_more.py  0017_alter_userprofile_instagram.py  0018_alter_userprofile_instagram.py  0019_remove_userprofile_home_university_or_faculty_and_more.py  0020_userprofile_enforce_revalidation.py  0021_alter_userprofile_created.py  0022_alter_userprofile_facebook_and_more.py  0023_userprofile_birth_date.py  0024_userprofile_avatar_slug.py  0025_alter_userprofile_avatar_slug.py  0026_alter_userprofile_avatar_slug.py  0027_userprofile_picture_height_userprofile_picture_width_and_more.py
fiesta/apps/accounts/models/: __init__.py  configuration.py  profile.py  user.py
fiesta/apps/accounts/services/: __init__.py  user_profile_state_synchronizer.py
fiesta/apps/accounts/templatetags/: memberships.py  social_accounts.py  user_profile.py
fiesta/apps/accounts/tests/: test_user_profile_state_synchronizer.py
fiesta/apps/accounts/views/: allauth.py  index.py  members.py  membership.py  profile.py  user_detail.py
fiesta/apps/buddy_system/: admin.py  apps.py  forms.py  urls.py
fiesta/apps/buddy_system/migrations/: 0001_initial.py  0002_buddysystemconfiguration_display_issuer_country_and_more.py  0003_buddyrequest_description_and_more.py  0004_buddyrequest_interests.py  0005_alter_buddyrequest_interests.py  0006_alter_buddyrequest_options_and_more.py  0007_alter_buddyrequest_interests.py  0008_alter_buddyrequest_interests.py  0009_alter_buddyrequest_interests.py  0010_alter_buddyrequest_interests.py  0011_alter_buddyrequest_interests.py  0012_alter_buddyrequest_interests.py  (+19 more)
fiesta/apps/dashboard/: admin.py  apps.py  urls.py
fiesta/apps/esnaccounts/: apps.py  provider.py  signals.py  urls.py  views.py
fiesta/apps/esncards/: admin.py  apps.py  urls.py
fiesta/apps/events/: admin.py  apps.py  urls.py
fiesta/apps/fiestaforms/: apps.py  forms.py  utils.py
fiesta/apps/fiestaoscar/: apps.py  urls.py
fiesta/apps/fiestarequests/: admin.py  apps.py  matching_policy.py
fiesta/apps/fiestatables/: apps.py  columns.py  filters.py  forms.py
fiesta/apps/files/: _patches.py  apps.py  storage.py  urls.py  utils.py  views.py
fiesta/apps/open_hours/: admin.py  apps.py  urls.py
fiesta/apps/pages/: admin.py  apps.py  storages.py  urls.py
fiesta/apps/pickup_system/: admin.py  apps.py  forms.py  urls.py
fiesta/apps/plugins/: admin.py  apps.py  plugin.py  urls.py  utils.py  views.py
fiesta/apps/public/: apps.py  urls.py  views.py
fiesta/apps/sections/: admin.py  apps.py  urls.py
fiesta/apps/universities/: admin.py  apps.py  forms.py  urls.py
fiesta/apps/utils/: apps.py  breadcrumbs.py  request.py  utils.py  views.py
fiesta/apps/wiki/: adapter.py  apps.py  elastic.py  models.py  urls.py  views.py
fiesta/fiesta/: __init__.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
fiesta/fiesta/checks/: __init__.py  fiesta.py  models.py
fiesta/fiesta/fixtures/: 01_demo_admin.json  02_demo_section-universities.json  03_demo_users.json  04_demo_base-plugins.json  05_demo_all-plugins.json
fiesta/fiesta/settings/: __init__.py  _utils.py  admin.py  app.py  auth.py  db.py  files.py  logging.py  notifications.py  oscar.py  project.py  security.py  templates.py  wagtail.py
fiesta/templates/: 400.html  403.html  404.html  500.html  _error_page.html
fiesta/templates/admin/: base.html
fiesta/templates/fiesta/: base.html  public.html
nginx/: Dockerfile  dockerproxy.Dockerfile  nginx.conf  nginx.conf.template  proxy.Dockerfile  webserver.Dockerfile
traefik/: traefik.toml
webpack/: .env.base  .snyk  Dockerfile  package.json  postcss.config.js  tailwind.config.js  webpack.base.config.js  webpack.dev.config.js  webpack.prod.config.js
webpack/src/: _Docs.css  _Forms.css  _Home.css  _Menu.css  _Tables.css  _Wiki.css  jquery.js  main.css  main.js
webpack/src/css/: _Dashboard.css  _Flags.css  _Forms.css  _Home.css  _Menu.css  _PublicHome.css  _SocialButton.css  _Tables.css  _Wiki.css  main.css
webpack/src/js/: dark-mode.js  filter.js  map-widget.js  modal.js  model-select.js  table.js
wiki/: .env.base  Dockerfile  Gemfile  fetcher.rb  wait-for-port.rb
(+461 files in other folders)
